[tool.poetry]
name = "auto-assign"
version = "0.1.0"
description = "GitHub action that automatically assigns issues and pull requests to specified assignees."
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
PyGithub = "^2.5"
dependency-injector = "^4.44"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pylint = "^3.3"
coverage = "^7.6"
parameterized = "^0.9"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"
